change background config

--- a/index.html
+++ b/index.html
@@ -38,10 +38,8 @@
             </div>
         </nav>
         <!-- Masthead-->
-        <header class="masthead">
-            <div class="container d-flex h-100 align-items-center">
-                
-            </div>
+        <header class="masthead h-100">
+        	<img class="img img-fluid" src="assets/img/bg-masthead.jpg" alt="" />
         </header>
         <!-- About-->
         <section class="about-section text-center" id="about">
