--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                                 <i class="fas fa-envelope text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Email</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50"><a href="mailto:lakshya3056arch17@spa.ac.in">lakshya3056arch17@spa.ac.in</a></div>
+                                <div class="small text-black-50"><a href="mailto:lksingla.2501@gmail.com">lksingla.2501@gmail.com</a></div>
                             </div>
                         </div>
                     </div>
@@ -361,7 +361,7 @@
                                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Phone</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50"><a href="tel:+918930351851">+91 8930351851</a></div>
+                                <div class="small text-black-50"><a href="tel:+917015451651">+91 7015451651</a></div>
                             </div>
                         </div>
                     </div>
