--- a/index.html
+++ b/index.html
@@ -53,7 +53,23 @@
         <section class="projects-section" id="projects">
             <div class="container" >
                 <!-- Featured Project Row-->
+
+                <!--project-1-->
+                <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+                    <div class="col-xl-10 col-lg-10">
+                    	<img class="img-fluid mb-3 mb-lg-0" src="assets/img/THESIS_LAKSHYASINGLA_A_3056_2017_page-0022.jpg" alt="" />
+                    </div>
+					<div class="col-xl-2 col-lg-2">
+						<div class="featured-text text-center text-lg-left">
+							<h3 class="text-white mb-4">SOLARIUM</h4>
+							<p class="text-white-50">Ansal Plaza Redesign <br/>Mixed use High Rise</p>
+							<a class="btn-primary btn-sm btn-lg" data-toggle="modal" data-target="#project1">View More</a>
+						</div>
+					</div>	
+	            </div>
+                <!--project-1-end-->
                 
+                <!--project-1-->
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
                     <div class="col-xl-10 col-lg-10">
                     	<img class="img-fluid mb-3 mb-lg-0" src="assets/img/project1img1.jpg" alt="" />
@@ -66,6 +82,10 @@
 						</div>
 					</div>	
 	            </div>
+                <!--project-1-end-->
+
+
+                <!--project-2-->
 
 	            <div class="row align-items-center no-gutters mb-4 mb-lg-5">
                     <div class="col-xl-10 col-lg-10">
@@ -79,6 +99,7 @@
 						</div>
 					</div>	
 	            </div>
+                <!--project-2-end-->
 
 	            <div class="row align-items-center no-gutters mb-4 mb-lg-5">
                     <div class="col-xl-10 col-lg-10">
@@ -369,7 +390,7 @@
             </div>
         </section>
         <!-- Footer-->
-        <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright © SPA-Lakshya 2020</div></footer>
+        <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright © ARCHITECT-Lakshya 2023</div></footer>
         <!-- Bootstrap core JS-->
         <script src="js/jquery.min.js"></script>
         <script src="js/bootstrap.bundle.min.js"></script>
