--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			<div class="row align-items-center no-gutters mb-4 mb-lg-5">
 				<div class="col-xl-10 col-lg-10">
 					<img class="img-fluid mb-3 mb-lg-0"
-						src="https://i.ibb.co/86rNBSZ/THESIS-LAKSHYASINGLA-A-3056-2017-page-0022.jpg" alt="" />
+						src="https://i.postimg.cc/L41Nvyw6/P1-01.jpg" alt="" />
 				</div>
 				<div class="col-xl-2 col-lg-2">
 					<div class="featured-text text-center text-lg-left">
@@ -220,7 +220,7 @@
 							</ol>
 							<div class="carousel-inner">
 								<div class="carousel-item active">
-									<img src="https://i.ibb.co/86rNBSZ/THESIS-LAKSHYASINGLA-A-3056-2017-page-0022.jpg"
+									<img src="https://i.postimg.cc/L41Nvyw6/P1-01.jpg"
 										class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
