--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 										class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
-									<img src="https://i.ibb.co/f1V63p8/P1-02.jpg" class="d-block w-100" alt="...">
+									<img src="https://i.postimg.cc/RZck8SYh/P1-02.jpg" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
 									<img src="https://i.ibb.co/DY4CdqJ/P1-03.jpg" class="d-block w-100" alt="...">
