--- a/index.html
+++ b/index.html
@@ -227,10 +227,10 @@
 									<img src="https://i.postimg.cc/RZck8SYh/P1-02.jpg" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
-									<img src="https://i.ibb.co/DY4CdqJ/P1-03.jpg" class="d-block w-100" alt="...">
+									<img src="https://i.postimg.cc/X7Wm5Sq0/P1-03.jpg" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
-									<img src="https://i.ibb.co/ZxVj6WT/P1-04.jpg" class="d-block w-100" alt="...">
+									<img src="https://i.postimg.cc/zXptRy4n/P1-04.jpg" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
 									<img src="https://i.ibb.co/096r4ZZ/P1-05.jpg" class="d-block w-100" alt="...">
