--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
 									<img src="https://i.postimg.cc/zXptRy4n/P1-04.jpg" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
-									<img src="https://i.ibb.co/096r4ZZ/P1-05.jpg" class="d-block w-100" alt="...">
+									<img src="https://i.postimg.cc/G2rGQQy9/P1-05.jpg" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
-									<img src="https://i.ibb.co/VHB70QP/P1-06.jpg" class="d-block w-100" alt="...">
+									<img src="https://i.postimg.cc/W4mJhkHV/P1-06.jpg" class="d-block w-100" alt="...">
 								</div>
 							</div>
 							<a class="carousel-control-prev" href="#project1_1Indicators" role="button"
