--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 			<!--project-1.2-->
 			<div class="row align-items-center no-gutters mb-4 mb-lg-5">
 				<div class="col-xl-10 col-lg-10">
-					<img class="img-fluid mb-3 mb-lg-0" src="https://i.ibb.co/Lv6F0Zk/P2-01.jpg" alt="" />
+					<img class="img-fluid mb-3 mb-lg-0" src="https://i.postimg.cc/D0RzCvM5/P2-01.jpg" alt="" />
 				</div>
 				<div class="col-xl-2 col-lg-2">
 					<div class="featured-text text-center text-lg-left">
@@ -270,22 +270,22 @@
 							</ol>
 							<div class="carousel-inner">
 								<div class="carousel-item active">
-									<img src="https://i.ibb.co/Lv6F0Zk/P2-01.jpg" class="d-block w-100" alt="...">
+									<img src="https://i.postimg.cc/D0RzCvM5/P2-01.jpg" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
-									<img src="https://i.ibb.co/S7rGbBB/P2-02.jpg" class="d-block w-100" alt="...">
+									<img src="https://i.postimg.cc/K8SzBYL8/P2-02.jpg" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
-									<img src="https://i.ibb.co/CtX0GjB/P2-03.jpg" class="d-block w-100" alt="...">
+									<img src="https://i.postimg.cc/y8mNPzXX/P2-03.jpg" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
-									<img src="https://i.ibb.co/0nphYgw/P2-04.jpg" class="d-block w-100" alt="...">
+									<img src="https://i.postimg.cc/8CTzXnZ8/P2-04.jpg" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
-									<img src="https://i.ibb.co/fNGR7Y1/P2-05.jpg" class="d-block w-100" alt="...">
+									<img src="https://i.postimg.cc/XJJ74BMQ/P2-05.jpg" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
-									<img src="https://i.ibb.co/cvzqq1m/P2-06.jpg" class="d-block w-100" alt="...">
+									<img src="https://i.postimg.cc/FKGsMg6Y/P2-06.jpg" class="d-block w-100" alt="...">
 								</div>
 
 							</div>
