--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
 			<div class="row align-items-center no-gutters mb-4 mb-lg-5">
 				<div class="col-xl-10 col-lg-10">
-					<img class="img-fluid mb-3 mb-lg-0" src="https://i.ibb.co/NKTbGrs/P3-01.jpg" alt="" />
+					<img class="img-fluid mb-3 mb-lg-0" src="https://i.postimg.cc/fb3DPnYr/P3-01.jpg" alt="" />
 				</div>
 				<div class="col-xl-2 col-lg-2">
 					<div class="featured-text text-center text-lg-left">
@@ -320,22 +320,22 @@
 							</ol>
 							<div class="carousel-inner">
 								<div class="carousel-item active">
-									<img src="https://i.ibb.co/NKTbGrs/P3-01.jpg" class="d-block w-100" alt="...">
+									<img src="https://i.postimg.cc/fb3DPnYr/P3-01.jpg" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
-									<img src="https://i.ibb.co/L80SGdj/P3-02.jpg" class="d-block w-100" alt="...">
+									<img src="https://i.postimg.cc/fysskVpG/P3-02.jpg" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
-									<img src="https://i.ibb.co/swF64B2/P3-03.jpg" class="d-block w-100" alt="...">
+									<img src="https://i.postimg.cc/4y1gcJTm/P3-03.jpg" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
-									<img src="https://i.ibb.co/HB6y5L6/P3-04.jpg" class="d-block w-100" alt="...">
+									<img src="https://i.postimg.cc/FFbm8xJN/P3-04.jpg" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
-									<img src="https://i.ibb.co/HGBmRKy/P3-05.jpg" class="d-block w-100" alt="...">
+									<img src="https://i.postimg.cc/Fs9m4Jjc/P3-05.jpg" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
-									<img src="https://i.ibb.co/VmxBw9D/P3-06.jpg" class="d-block w-100" alt="...">
+									<img src="https://i.postimg.cc/jS1rPgBQ/P3-06.jpg" class="d-block w-100" alt="...">
 								</div>
 
 							</div>
