--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
 			<div class="row align-items-center no-gutters mb-4 mb-lg-5">
 				<div class="col-xl-10 col-lg-10">
-					<img class="img-fluid mb-3 mb-lg-0" src="https://i.ibb.co/PC3MhqS/P6-01.jpg" alt="" />
+					<img class="img-fluid mb-3 mb-lg-0" src="https://i.postimg.cc/7LBXfdcw/P6-01.jpg" alt="" />
 				</div>
 				<div class="col-xl-2 col-lg-2">
 					<div class="featured-text text-center text-lg-left">
@@ -461,16 +461,16 @@
 							</ol>
 							<div class="carousel-inner">
 								<div class="carousel-item active">
-									<img src="https://i.ibb.co/PC3MhqS/P6-01.jpg" class="d-block w-100" alt="...">
+									<img src="https://i.postimg.cc/7LBXfdcw/P6-01.jpg" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
-									<img src="https://i.ibb.co/8xB50bR/P6-02.jpg" class="d-block w-100" alt="...">
+									<img src="https://i.postimg.cc/MTNDYRqL/P6-02.jpg" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
-									<img src="https://i.ibb.co/S7tKCt1/P6-03.jpg" class="d-block w-100" alt="...">
+									<img src="https://i.postimg.cc/PfvK56Mn/P6-03.jpg" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
-									<img src="https://i.ibb.co/sbjCV2p/P6-04.jpg" class="d-block w-100" alt="...">
+									<img src="https://i.postimg.cc/CLy7BjvB/P6-04.jpg" class="d-block w-100" alt="...">
 								</div>
 							</div>
 							<a class="carousel-control-prev" href="#projectv2_6Indicators" role="button"
