--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 			<div class="row align-items-center no-gutters mb-4 mb-lg-5">
 				<div class="col-xl-10 col-lg-10">
-					<img class="img-fluid mb-3 mb-lg-0" src="https://i.ibb.co/JKfRkRb/Ansal.jpg" alt="" />
+					<img class="img-fluid mb-3 mb-lg-0" src="https://i.postimg.cc/kgsLvjZh/Ansal.jpg" alt="" />
 				</div>
 				<div class="col-xl-2 col-lg-2">
 					<div class="featured-text text-center text-lg-left">
@@ -369,7 +369,7 @@
 							</ol>
 							<div class="carousel-inner">
 								<div class="carousel-item active">
-									<img src="https://i.ibb.co/JKfRkRb/Ansal.jpg" class="d-block w-100" alt="...">
+									<img src="https://i.postimg.cc/kgsLvjZh/Ansal.jpg" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
 									<img src="assets/img/project1img2.jpg" class="d-block w-100" alt="...">
