--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
 			<div class="row align-items-center no-gutters mb-4 mb-lg-5">
 				<div class="col-xl-10 col-lg-10">
-					<img class="img-fluid mb-3 mb-lg-0" src="https://i.ibb.co/QHhFKdz/P8-01.jpg" alt="" />
+					<img class="img-fluid mb-3 mb-lg-0" src="https://i.postimg.cc/ZKCmnzMK/P8-01.jpg" alt="" />
 				</div>
 				<div class="col-xl-2 col-lg-2">
 					<div class="featured-text text-center text-lg-left">
@@ -510,31 +510,31 @@
 							</ol>
 							<div class="carousel-inner">
 								<div class="carousel-item active">
-									<img src="https://i.ibb.co/QHhFKdz/P8-01.jpg" class="d-block w-100" alt="...">
+									<img src="https://i.postimg.cc/ZKCmnzMK/P8-01.jpg" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
-									<img src="https://i.ibb.co/bv39JpD/P8-02.jpg" class="d-block w-100" alt="...">
+									<img src="https://i.postimg.cc/RZtz1Qmk/P8-02.jpg" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
-									<img src="https://i.ibb.co/jJH6WsY/P8-03.jpg" class="d-block w-100" alt="...">
+									<img src="https://i.postimg.cc/rpL2f0FK/P8-03.jpg" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
-									<img src="https://i.ibb.co/VHtjD0y/P8-04.jpg" class="d-block w-100" alt="...">
+									<img src="https://i.postimg.cc/7LM8dHfX/P8-04.jpg" class="d-block w-100" alt="...">
 								</div>
 							<div class="carousel-item">
-								<img src="https://i.ibb.co/p4YdnNB/P8-05.jpg" class="d-block w-100" alt="...">
+								<img src="https://i.postimg.cc/nz38V3KD/P8-05.jpg" class="d-block w-100" alt="...">
 							</div>
 						<div class="carousel-item">
-							<img src="https://i.ibb.co/cLT06jj/P8-06.jpg" class="d-block w-100" alt="...">
+							<img src="https://i.postimg.cc/2yys1nTX/P8-06.jpg" class="d-block w-100" alt="...">
 						</div>
 					<div class="carousel-item">
-						<img src="https://i.ibb.co/NmhXSSS/P8-07.jpg" class="d-block w-100" alt="...">
+						<img src="https://i.postimg.cc/tJcLW7MR/P8-07.jpg" class="d-block w-100" alt="...">
 					</div>
 				<div class="carousel-item">
-					<img src="https://i.ibb.co/GcGKczm/P8-08.jpg" class="d-block w-100" alt="...">
+					<img src="https://i.postimg.cc/tRm0Lm40/P8-08.jpg" class="d-block w-100" alt="...">
 				</div>
 			<div class="carousel-item">
-				<img src="https://i.ibb.co/phrFZZh/P8-09.jpg" class="d-block w-100" alt="...">
+				<img src="https://i.postimg.cc/DyJVFdSS/P8-09.jpg" class="d-block w-100" alt="...">
 			</div>
 		</div>
 	</div>
