--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
 									<img src="assets/img/project9.jpg" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
-									<img src="https://i.ibb.co/qdMVgV5/HC-7.jpg" class="d-block w-100" alt="...">
+									<img src="https://i.postimg.cc/vmdLDMXJ/HC-7.jpg" class="d-block w-100" alt="...">
 								</div>
 
 							</div>
