--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 				</div>
 				<div class="col-xl-2 col-lg-2">
 					<div class="featured-text text-center text-lg-left">
-						<h3 class="text-white mb-4">TRANSIT ORIENTED DESIGN</h4>
-							<p class="text-white-50">DWARKA, NEW DELHI <br />UD : 2021</p>
+						<h3 class="text-white mb-4">URBAN DESIGN</h4>
+							<p class="text-white-50">DWARKA, NEW DELHI <br />T.O.D. : 2021</p>
 							<a class="btn-primary btn-sm btn-lg" data-toggle="modal" data-target="#project1_2">View
 								More</a>
 					</div>
