--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<section class="about-section text-center" id="about">
 		<div class="container">
 			<img class="img img-fluid" src="assets/img/profile.jpg" alt="" />
-			<img class="img img-fluid" src="assets/img/accomplishment.jpg" alt="" />
+			<img class="img img-fluid" src="assets/img/accomplishment NEW.jpg" alt="" />
 			<img class="img img-fluid" src="assets/img/content.jpg" alt="" />
 		</div>
 	</section>
