--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<div class="container">
 			<img class="img img-fluid" src="assets/img/profile.jpg" alt="" />
 			<img class="img img-fluid" src="assets/img/accomplishment NEW.jpg" alt="" />
-			<img class="img img-fluid" src="assets/img/content.jpg" alt="" />
+			<img class="img img-fluid" src="assets/img/CONTENTS.jpg" alt="" />
 		</div>
 	</section>
 	<!-- Projects-->
