--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 				</div>
 				<div class="col-xl-2 col-lg-2">
 					<div class="featured-text text-center text-lg-left">
-						<h3 class="text-white mb-4">VISUALZATIONS</h4>
+						<h3 class="text-white mb-4">VISUALIZATIONS</h4>
 							<p class="text-white-50">REVIT + LUMION </br>2019-2022</p>
 							<a class="btn-primary btn-sm btn-lg" data-toggle="modal" data-target="#projectv2_7">View
 								More</a>
