--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<!-- About-->
 	<section class="about-section text-center" id="about">
 		<div class="container">
-			<img class="img img-fluid" src="assets/img/CV.jpg" alt="" />
+			<img class="img img-fluid" src="assets/img/CV02.jpg" alt="" />
 			<img class="img img-fluid" src="assets/img/accomplishment NEW.jpg" alt="" />
 			<img class="img img-fluid" src="assets/img/CONTENTS.jpg" alt="" />
 		</div>
