--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<section class="about-section text-center" id="about">
 		<div class="container">
 			<img class="img img-fluid" src="assets/img/CV02.jpg" alt="" />
-			<img class="img img-fluid" src="assets/img/accomplishment NEW.jpg" alt="" />
+			<img class="img img-fluid" src="assets/img/accomplishment NEW01.jpg" alt="" />
 			<img class="img img-fluid" src="assets/img/CONTENTS.jpg" alt="" />
 		</div>
 	</section>
