--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				<div class="col-xl-2 col-lg-2">
 					<div class="featured-text text-center text-lg-left">
 						<h3 class="text-white mb-4">DESIGN CENTER</h4>
-							<p class="text-white-50">BANGALORE, INDIA <br />THESIS : 2022</p>
+							<p class="text-white-50">BANGALORE, INDIA <br />THESIS, 2022</p>
 							<a class="btn-primary btn-sm btn-lg" data-toggle="modal" data-target="#project1_1">View
 								More</a>
 					</div>
@@ -87,7 +87,7 @@
 				<div class="col-xl-2 col-lg-2">
 					<div class="featured-text text-center text-lg-left">
 						<h3 class="text-white mb-4">URBAN DESIGN</h4>
-							<p class="text-white-50">DWARKA, NEW DELHI <br />T.O.D. : 2021</p>
+							<p class="text-white-50">DWARKA, NEW DELHI <br />2021</p>
 							<a class="btn-primary btn-sm btn-lg" data-toggle="modal" data-target="#project1_2">View
 								More</a>
 					</div>
@@ -105,7 +105,7 @@
 				<div class="col-xl-2 col-lg-2">
 					<div class="featured-text text-center text-lg-left">
 						<h3 class="text-white mb-4">SANCTUARY RANCH</h4>
-							<p class="text-white-50">LOCKHART, TEXAS <br /> RA : 2022</p>
+							<p class="text-white-50">LOCKHART, TEXAS <br /> RA, 2022</p>
 							<a class="btn-primary btn-sm btn-lg" data-toggle="modal" data-target="#project2">View
 								More</a>
 					</div>
@@ -120,7 +120,7 @@
 				<div class="col-xl-2 col-lg-2">
 					<div class="featured-text text-center text-lg-left">
 						<h3 class="text-white mb-4">SOLARIUM</h4>
-							<p class="text-white-50">Ansal Plaza Redesign <br />Mixed use High Rise</p>
+							<p class="text-white-50">ANSAL PLAZA REDESIGN <br />2020</p>
 							<a class="btn-primary btn-sm btn-lg" data-toggle="modal" data-target="#project1">View
 								More</a>
 					</div>
@@ -135,7 +135,7 @@
 				<div class="col-xl-2 col-lg-2">
 					<div class="featured-text text-center text-lg-left">
 						<h3 class="text-white mb-4">HOUSE JO</h4>
-							<p class="text-white-50">TAMPAH HILLS, LOMBOK, INDONESIA <br />INTERNSHIP : 2021</p>
+							<p class="text-white-50">TAMPAH HILLS, INDONESIA <br />ALEXIS DORNIER, 2021</p>
 							<a class="btn-primary btn-sm btn-lg" data-toggle="modal" data-target="#projectv2_5">View
 								More</a>
 					</div>
@@ -149,7 +149,7 @@
 				<div class="col-xl-2 col-lg-2">
 					<div class="featured-text text-center text-lg-left">
 						<h3 class="text-white mb-4">VILLA FAROOQ</h4>
-							<p class="text-white-50">MUMBAI, INDIA <br />INTERNSHIP : 2022</p>
+							<p class="text-white-50">MUMBAI, INDIA <br />ALEXIS DORNIER, 2022</p>
 							<a class="btn-primary btn-sm btn-lg" data-toggle="modal" data-target="#projectv2_6">View
 								More</a>
 					</div>
