--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 				<div class="col-xl-2 col-lg-2">
 					<div class="featured-text text-center text-lg-left">
 						<h3 class="text-white mb-4">BAMBOO RESIDENCE</h4>
-							<p class="text-white-50">Cafe + Residence</p>
+							<p class="text-white-50">CAFE + RESIDENCE<br />2019</p>
 							<a class="btn-primary btn-sm btn-lg" data-toggle="modal" data-target="#project3">View
 								More</a>
 					</div>
