--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 				<div class="col-xl-2 col-lg-2">
 					<div class="featured-text text-center text-lg-left">
 						<h3 class="text-white mb-4">SANCTUARY RANCH</h4>
-							<p class="text-white-50">LOCKHART, TEXAS <br /> RA, 2022</p>
+							<p class="text-white-50">TEXAS, USA <br /> RA, 2022</p>
 							<a class="btn-primary btn-sm btn-lg" data-toggle="modal" data-target="#project2">View
 								More</a>
 					</div>
@@ -120,7 +120,7 @@
 				<div class="col-xl-2 col-lg-2">
 					<div class="featured-text text-center text-lg-left">
 						<h3 class="text-white mb-4">SOLARIUM</h4>
-							<p class="text-white-50">ANSAL PLAZA REDESIGN <br />2020</p>
+							<p class="text-white-50">NEW DELHI, INDIA <br />2020</p>
 							<a class="btn-primary btn-sm btn-lg" data-toggle="modal" data-target="#project1">View
 								More</a>
 					</div>
@@ -164,7 +164,7 @@
 				<div class="col-xl-2 col-lg-2">
 					<div class="featured-text text-center text-lg-left">
 						<h3 class="text-white mb-4">BAMBOO RESIDENCE</h4>
-							<p class="text-white-50">CAFE + RESIDENCE<br />2019</p>
+							<p class="text-white-50">CAFE + RESIDENCE <br />2019</p>
 							<a class="btn-primary btn-sm btn-lg" data-toggle="modal" data-target="#project3">View
 								More</a>
 					</div>
