--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
 	</nav>
 	<!-- Masthead-->
 	<header class="masthead h-100">
-		<img class="img img-fluid" src="assets/img/NEWCOVER.jpg" alt="" />
+		<img class="img img-fluid" src="assets/img/NEWCOVER01.jpg" alt="" />
 	</header>
 	<!-- About-->
 	<section class="about-section text-center" id="about">
 		<div class="container">
-			<img class="img img-fluid" src="assets/img/CV02.jpg" alt="" />
+			<img class="img img-fluid" src="assets/img/CV03.jpg" alt="" />
 			<img class="img img-fluid" src="assets/img/accomplishment NEW01.jpg" alt="" />
 			<img class="img img-fluid" src="assets/img/CONTENTS.jpg" alt="" />
 		</div>
