--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<div class="container">
 			<img class="img img-fluid" src="assets/img/CV03.jpg" alt="" />
 			<img class="img img-fluid" src="assets/img/accomplishment NEW01.jpg" alt="" />
-			<img class="img img-fluid" src="assets/img/CN.jpg" alt="" />
+			<img class="img img-fluid" src="assets/img/CONTENTS01.jpg" alt="" />
 		</div>
 	</section>
 	<!-- Projects-->
