--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 			<!--project-1.2-->
 			<div class="row align-items-center no-gutters mb-4 mb-lg-5">
 				<div class="col-xl-10 col-lg-10">
-					<img class="img-fluid mb-3 mb-lg-0" src="https://i.postimg.cc/7PV2skxV/P2-01.jpg" alt="" />
+					<img class="img-fluid mb-3 mb-lg-0" src="https://i.postimg.cc/MpGQj0by/P2-07.jpg" alt="" />
 				</div>
 				<div class="col-xl-2 col-lg-2">
 					<div class="featured-text text-center text-lg-left">
