--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 							</ol>
 							<div class="carousel-inner">
 								<div class="carousel-item active">
-									<img src="https://i.postimg.cc/7PV2skxV/P2-01.jpg" class="d-block w-100" alt="...">
+									<img src="https://i.postimg.cc/MpGQj0by/P2-07.jpg" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
 									<img src="https://i.postimg.cc/K8SzBYL8/P2-02.jpg" class="d-block w-100" alt="...">
