--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 			<!--project-1.2-->
 			<div class="row align-items-center no-gutters mb-4 mb-lg-5">
 				<div class="col-xl-10 col-lg-10">
-					<img class="img-fluid mb-3 mb-lg-0" src="https://i.postimg.cc/MpGQj0by/P2-07.jpg" alt="" />
+					<img class="img-fluid mb-3 mb-lg-0" src="https://i.ibb.co/9bzysMM/P2-07.jpg" alt="" />
 				</div>
 				<div class="col-xl-2 col-lg-2">
 					<div class="featured-text text-center text-lg-left">
@@ -271,7 +271,7 @@
 							</ol>
 							<div class="carousel-inner">
 								<div class="carousel-item active">
-									<img src="https://i.postimg.cc/MpGQj0by/P2-07.jpg" class="d-block w-100" alt="...">
+									<img src="https://i.ibb.co/9bzysMM/P2-07.jpg" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
 									<img src="https://i.postimg.cc/K8SzBYL8/P2-02.jpg" class="d-block w-100" alt="...">
