--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	</nav>
 	<!-- Masthead-->
 	<header class="masthead h-100">
-		<img class="img img-fluid" src="assets/img/NEWCOVER01.jpg" alt="" />
+		<img class="img img-fluid" src="assets/img/FRONT PAGE.jpg" alt="" />
 	</header>
 	<!-- About-->
 	<section class="about-section text-center" id="about">
