--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 				<div class="col-xl-2 col-lg-2">
 					<div class="featured-text text-center text-lg-left">
 						<h3 class="text-white mb-4">VISUALIZATIONS</h4>
-							<p class="text-white-50">REVIT + LUMION </br>2019-2022</p>
+							<p class="text-white-50">REVIT + LUMION </br>2019-2024</p>
 							<a class="btn-primary btn-sm btn-lg" data-toggle="modal" data-target="#projectv2_7">View
 								More</a>
 					</div>
@@ -196,7 +196,7 @@
 				<div class="col-xl-2 col-lg-2">
 					<div class="featured-text text-center text-lg-left">
 						<h3 class="text-white mb-4">HANDCRAFT WORK</h4>
-							<p class="text-white-50">2019-2023 :</p>
+							<p class="text-white-50">2019-2024 :</p>
 							<a class="btn-primary btn-sm btn-lg" data-toggle="modal" data-target="#project4">View
 								More</a>
 					</div>
@@ -694,7 +694,7 @@
 	</section>
 	<!-- Footer-->
 	<footer class="footer bg-black small text-center text-white-50">
-		<div class="container">Copyright © ARCHITECT-Lakshya 2023</div>
+		<div class="container">ARCHITECT I ARTSIT I DESIGNER - LAKSHYA</div>
 	</footer>
 	<!-- Bootstrap core JS-->
 	<script src="js/jquery.min.js"></script>
