--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
 									<img src="https://i.postimg.cc/ZKCmnzMK/P8-01.jpg" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
-									<img src="https://i.postimg.cc/RZtz1Qmk/P8-02.jpg" class="d-block w-100" alt="...">
+									<img src="assets/img/P8-02.jpg" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
 									<img src="https://i.postimg.cc/rpL2f0FK/P8-03.jpg" class="d-block w-100" alt="...">
