--- a/index.html
+++ b/index.html
@@ -514,10 +514,10 @@
 									<img src="https://i.postimg.cc/ZKCmnzMK/P8-01.jpg" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
-									<img src="assets/img/P8-02.jpg" class="d-block w-100" alt="...">
+									<img src="img/P8-02.jpg" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
-									<img src="https://i.postimg.cc/rpL2f0FK/P8-03.jpg" class="d-block w-100" alt="...">
+									<img src="img/P8-03.jpg" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
 									<img src="https://i.postimg.cc/7LM8dHfX/P8-04.jpg" class="d-block w-100" alt="...">
@@ -532,10 +532,10 @@
 						<img src="https://i.postimg.cc/tJcLW7MR/P8-07.jpg" class="d-block w-100" alt="...">
 					</div>
 				<div class="carousel-item">
-					<img src="https://i.postimg.cc/tRm0Lm40/P8-08.jpg" class="d-block w-100" alt="...">
+					<img src="img/P8-08.jpg" class="d-block w-100" alt="...">
 				</div>
 			<div class="carousel-item">
-				<img src="https://i.postimg.cc/DyJVFdSS/P8-09.jpg" class="d-block w-100" alt="...">
+				<img src="img/P8-09.jpg" class="d-block w-100" alt="...">
 			</div>
 		</div>
 	</div>
